<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <CheckBoxPreference
        android:key="pref_track"
        android:title="@string/pref_track"
        android:summary="@string/pref_track_summ"
        android:defaultValue="true" />
    
    <CheckBoxPreference
        android:dependency="pref_track"
        android:key="pref_sync"
        android:title="@string/pref_sync"
        android:summary="@string/pref_sync_summ"
        android:defaultValue="true" />
    
    
    <uni.ma.todotogo.IntEditTextPreference
        android:dependency="pref_sync"
        android:key="pref_distance"
        android:title= "Information Radius (m)"
        android:defaultValue="100"
        android:numeric="integer"
        />
    <ListPreference
        android:dependency="pref_sync"
        android:key="pref_syncConnectionType"
        android:title="@string/pref_syncConnectionType"
        android:dialogTitle="@string/pref_syncConnectionType"
        android:entries="@array/syncFrequency"
        android:entryValues="@array/syncFrequencyValues"
        />
    
    <RingtonePreference
        android:dependency="pref_sync"
        android:key="pref_tone"
        android:title="@string/pref_tone"
        android:summary="@string/pref_mute_summ"
        android:showDefault="true"
        android:showSilent="true"/>

</PreferenceScreen>
